# gpp

./: README.md  gpp  pyproject.toml
gpp/: cli.py  instruct.py
system-examples/: README.md  en  json  no  py
