[tool.poetry]
name = "gpp"
version = "0.1.0"
description = ""
authors = ["Gisle Aas <gisle.aas@uib.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
click = "^8.1.4"

[tool.poetry.scripts]
gpp = "gpp.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
