[project]
authors = [
    {name = "Gisle Aas", email = "gisle.aas@uib.no"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "openai<2.0.0,>=1.0.0",
    "click<9.0.0,>=8.1.4",
    "rich<14.0.0,>=13.4.2",
]
name = "gpp"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.uv]
package = true

[project.scripts]
gpp = "gpp.cli:main"
instruct = "gpp.instruct:main"
