[project]
authors = [
    {name = "Gisle Aas", email = "gisle.aas@uib.no"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "openai",
    "click",
    "rich",
]
name = "gpp"
version = "0.2.0"
description = ""
readme = "README.md"

[tool.uv]
package = true

[project.scripts]
gpp = "gpp.cli:main"
instruct = "gpp.instruct:main"
